--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -100,6 +100,10 @@
         }
     }
 
+    &__info-communication p {
+        user-select: none;
+    }
+
     &__links-list__item-link,
     &__info-communication p,
     &__docs a {
